# stm32_template

./: CMakeLists.txt  README.md  STM32.cmake  STM32_Settings.cmake
include/: main.h
src/: main.c
